# nano_distributed_pow_client

./: .gitignore  Dockerfile  README.md  broken_Dockerfile  client  client.conf  client.py  configure.ac  makefile.in  mpow.c  mpow.cl  nano-dpow-client  performance_check.py  setup.py  windows_instructions.md
doc/: windows_instructions.md  windows_node_instructions.md
